# caviar

./: .gitignore  Cargo.toml  README.md  demo_cheatsheet.txt  executionResults.txt  expressions_egg.csv  expressions_release.csv  results.csv  results_fast_passes_0.1.csv  results_rules_egg.csv  results_simplify.csv  run.sh
data/: expressions.csv  results_simplify_new_rules.csv  rules.json
data/dataset/: 288_dataset.json  5k_dataset.json  dataset-batch-1.json  dataset-batch-2.json  dataset-batch-3.json  dataset-batch-4.json  dataset-batch-5.json  new_dataset.json  results_fast_passes_0.1.csv
data/infix/: all_expressions.csv  evaluation.csv  extracted_expressions_halide.csv  generated_expresions.csv  generated_expressions.csv  lasteval.csv  patterns10k.csv  small_test_expressions.csv  test.csv  testset1k.csv
data/prefix/: 288_dataset.csv  5k_dataset.csv  demo.csv  evaluation.csv  expressions_egg.csv  expressions_halide_cant_prove.csv  lasteval_notproved.csv  local_laplacian_prefix.csv  old_expressions_egg.csv  patterns10k.csv  short_demo.csv  sorted_5s_100.csv  test_expressions_egg.csv  testset1k.csv
experiments/beh_autotuning/: run_expr.sh
experiments/fail_fast_tests/: run_expr.sh
experiments/mov_v_baseline/: run_expr.sh
halide_rules/: Simplify_Mul.cpp  Simplify_Sub.cpp
results/: .~lock.rules_egg.csv#  results_rules_egg.csv  rules_egg.csv
src/: main.rs  main2.rs  structs.rs  trs.rs
src/dataset/: mod.rs
src/io/: reader.rs  writer.rs
src/rules/: add.rs  and.rs  andor.rs  demo.rs  div.rs  eq.rs  ineq.rs  lt.rs  max.rs  min.rs  mod.rs  modulo.rs  mul.rs  (+3 more)
(+118 files in other folders)
