[package]
name = "egg_halides_trs"
version = "0.1.0"
authors = ["Smail KOURTA <gs_kourta@esi.dz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = { git = "https://github.com/namani-kourta-pfe/egg", branch = "check_equivalence_iteration_level" }
ordered-float = "1"
env_logger = "0.8.2"
colored = "2"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2.14"
rand = "0.8.0"
json = "*"
rayon = "1.5"
